--- a/Tarefa 12 - Funções/atv1.html
+++ b/Tarefa 12 - Funções/atv1.html
@@ -1,3 +1,5 @@
+<!-- Tarefa 12 - Funções -->
+
 <!-- Faça um projeto que contenha uma função JavaScript em que o usuário informe 3 números e o programa calcule a média aritmética desses números e mostre o resultado -->
 
 <!DOCTYPE html>
