--- a/Tarefa 12 - Funções/atv1.html
+++ b/Tarefa 12 - Funções/atv1.html
@@ -1,9 +1,11 @@
 <!-- Tarefa 12 - Funções -->
 
+<!-- Atividade 1 -->
+
 <!-- Faça um projeto que contenha uma função JavaScript em que o usuário informe 3 números e o programa calcule a média aritmética desses números e mostre o resultado -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
