--- a/Tarefa 10 - grid/atv1.html
+++ b/Tarefa 10 - grid/atv1.html
@@ -1,5 +1,12 @@
+<!-- Tarefa 10 - grid -->
+
+<!-- Atividade 1 -->
+
+<!-- Criar um álbum com grid, contendo 10 imagens de tamanhos diferentes
+Você pode adicionar esse álbum ao seu site ou pode fazer um projeto separado -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
