--- a/Tarefa 9 - carrossel/html/atv1.html
+++ b/Tarefa 9 - carrossel/html/atv1.html
@@ -1,5 +1,11 @@
+<!-- Tarefa 9 - carrossel -->
+
+<!-- Atividade 1 -->
+
+<!-- Crie um carrossel de imagens em seu site -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
